fixing spacing

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -9,7 +9,7 @@
 
 .projectBox {
     color: black;
-    margin: 20px;
+    margin: 20px 5px 20px 5px;
     padding: 10px;
     padding-top: 10%;
     height: 400px;
